--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:columnCount="2">
+
+    <ImageView
+        android:id="@+id/atmIcon"
+        android:layout_width="28dp"
+        android:layout_height="37dp"
+        android:layout_gravity="fill_horizontal"
+        android:src="@drawable/map_point_orange"
+        />
 
     <TextView
-        android:id="@+id/id"
+        android:id="@+id/atmStreetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/atmType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/atmDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
+</GridLayout>
