fragment_atm distance added

--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:layout_columnSpan="2"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
@@ -35,4 +36,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:id="@+id/atmDistance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
 </GridLayout>
