--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
@@ -7,40 +8,41 @@
     android:layout_marginRight="5dp"
     android:columnCount="2">
 
+
     <ImageView
         android:id="@+id/atmIcon"
-        android:layout_width="28dp"
-        android:layout_height="37dp"
-        android:src="@drawable/map_point_orange"
-        />
+        android:layout_width="38dp"
+        android:layout_height="27dp"
+        android:layout_column="0"
+        android:layout_row="0"
+        app:srcCompat="@drawable/map_point_orange" />
 
     <TextView
         android:id="@+id/atmStreetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
-    <TextView
-        android:id="@+id/atmType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:layout_columnSpan="2"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_column="1"
+        android:layout_row="0" />
 
     <TextView
         android:id="@+id/atmDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_columnSpan="2"
+        android:layout_column="0"
+        android:layout_row="1" />
+
+    <TextView
+        android:id="@+id/atmType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="2" />
 
     <TextView
         android:id="@+id/atmDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
+        android:layout_column="1"
+        android:layout_row="2" />
 </GridLayout>
