--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -15,7 +15,8 @@
         android:layout_height="27dp"
         android:layout_column="0"
         android:layout_row="0"
-        app:srcCompat="@drawable/map_point_orange" />
+        app:srcCompat="@drawable/map_point_orange"
+        android:contentDescription="@string/atmIconDescription" />
 
     <TextView
         android:id="@+id/atmStreetName"
