--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -8,22 +8,25 @@
     android:layout_marginRight="5dp"
     android:columnCount="2">
 
-
-    <ImageView
-        android:id="@+id/atmIcon"
-        android:layout_width="38dp"
-        android:layout_height="27dp"
-        android:layout_column="0"
-        android:layout_row="0"
-        app:srcCompat="@drawable/map_point_orange"
-        android:contentDescription="@string/atmIconDescription" />
-
-    <TextView
-        android:id="@+id/atmStreetName"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_row="0" />
+        android:orientation="horizontal"
+        android:layout_columnSpan="2">
+
+        <ImageView
+            android:id="@+id/atmIcon"
+            android:layout_width="38dp"
+            android:layout_height="27dp"
+            app:srcCompat="@drawable/map_point_orange"
+            android:contentDescription="@string/atmIconDescription" />
+
+        <TextView
+            android:id="@+id/atmStreetName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/atmDescription"
