--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -25,6 +25,7 @@
             android:id="@+id/atmStreetName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="9dp"/>
     </LinearLayout>
 
@@ -32,6 +33,7 @@
         android:id="@+id/atmDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
         android:layout_columnSpan="2"
         android:layout_column="0"
         android:layout_row="1" />
@@ -40,6 +42,7 @@
         android:id="@+id/atmType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
         android:layout_column="0"
         android:layout_row="2" />
 
@@ -47,6 +50,7 @@
         android:id="@+id/atmDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
         android:layout_column="1"
         android:layout_row="2" />
 </GridLayout>
