--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -6,7 +6,9 @@
     android:layout_marginTop="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:columnCount="2">
+    android:columnCount="2"
+    android:elevation="3dp"
+    android:background="@drawable/shadow_rect">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
             android:id="@+id/atmIcon"
             android:layout_width="27dp"
             android:layout_height="38dp"
+            android:layout_marginStart="3dp"
             app:srcCompat="@drawable/map_point_orange"
             android:contentDescription="@string/atmIconDescription" />
 
