--- a/app/src/main/res/layout/fragment_atm.xml
+++ b/app/src/main/res/layout/fragment_atm.xml
@@ -49,6 +49,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-thin"
         android:layout_marginStart="33dp"
+        android:layout_marginEnd="3dp"
+        android:layout_gravity="end"
         android:layout_column="1"
         android:layout_row="1" />
 </GridLayout>
