fragment_main bind to MapFragment

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="int09h.facebook.com.sbtexhere3.MainActivity$MapFragment">
+    tools:context="int09h.facebook.com.sbtexhere3.MapFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
